syntax = "proto3";

package account_service.requests.login.login;

import "google/protobuf/timestamp.proto";
import "account-service/models/user.proto";

option go_package = "shared/proto/account-service/requests/login";

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    account_service.models.user.User user = 1;
    string sessionId = 2;
    string accessToken = 3;
    string refreshToken = 4;
    google.protobuf.Timestamp accessTokenExpiresAt = 5;
    google.protobuf.Timestamp refreshTokenExpiresAt = 6;
}
